# Pedro

./: .gitignore  .gitmodules  README.md  dune-project
doc/: pn-syntax.md
examples/: ChoiceRec.nuscr  Simple.pdr  Simple.scr  Simple2.nuscr  Simple2.pdr  TB2.pdr  TwoBuyer.pdr  TwoBuyer.scr  par.nuscr  proto.pdr  read-short.pdr  read.pdr  rec.pdr  simpleTwoBuyer.pdr  streaming.nuscr
logo/: pedro.afdesign
src/: dune  gopedro.ml  lexer.mll  lib.ml  monad.ml  opsem.ml  parser.mly  pedro.ml  pedrolib.ml  pn.ml  pretty.ml  syntax.ml  util.ml
src/lib/: dune  global.ml  lib.ml  monad.ml  opsem.ml  parser.mly  pn.ml  pretty.ml  proj.ml  solib.ml  solib.mli  syntax.ml  util.ml  wf.ml
