(library
 (name pedrolib)
 (libraries ocamlgraph sexplib nuscr.lib nuscr.utils))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags "--explain"))

(rule
 (target version.ml)
 (deps (universe))
 (action
  (with-stdout-to
   version.ml
   (bash "echo let commit_hash = \\\"$(git rev-parse HEAD)\\\""))))
